--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: erlef/setup-beam@v1
         with:
           version-type: strict
-          otp-version: '25.0-rc3'
+          otp-version: '25.1.1'
       - run: escript test.erl
   windows:
     runs-on: windows-2022
@@ -22,7 +22,7 @@ jobs:
         uses: erlef/setup-beam@v1
         with:
           version-type: strict
-          otp-version: '25.0-rc3'
+          otp-version: '25.1.1'
       - run: escript test.erl
         continue-on-error: true
       - run: |
